# tesseract-bin

./: .gitignore  BUILDENV_MISSING_LIBS.md  CMakeLists.txt  README.md  create_releases  fix_leptonica_targets.sh  mise.toml  patch_leptonica.sh  patch_leptonica_config.sh  patch_libtiff.sh  tesseract_deps.cmake
.github/workflows/: build-releases.yml  pr-build-test.yml
cmake/: FindCMath.cmake
triplets/: x64-mingw-static.cmake
